--- a/BFCNews/Views/Department/Index.cshtml
+++ b/BFCNews/Views/Department/Index.cshtml
@@ -55,7 +55,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                @{
+                                @{if(departments!=null){
                                     foreach(var deparment in departments)
                                     {
                                      <tr>
@@ -65,6 +65,7 @@
                                         <td> 4</td>
                                 </tr>
                                     };
+                                }
                                 }
                             </tbody>
                         </table>
