làm lại xóa nhá
làm lại xóa nhá

--- a/BFCNews/Views/Shared/_LayoutAdmin.cshtml
+++ b/BFCNews/Views/Shared/_LayoutAdmin.cshtml
@@ -104,7 +104,7 @@
     <script src="../../plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
     <script>
     $(function () {
-    $("#example1").DataTable({
+    $("#tbDepartment").DataTable({
     "responsive": true, "lengthChange": false, "autoWidth": false,
     "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
     }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
