--- a/BFCNews/Views/Department/Index.cshtml
+++ b/BFCNews/Views/Department/Index.cshtml
@@ -3,28 +3,27 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
     var departments = ViewBag.Departments;
 }
+
 <section class="content">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12">
                 <div class="card">
-                    <div id="alertarea"></div>
                     <div class="card-header">
-                        <h3 class="card-title">DataTable with default features</h3>
+                        <h1 class="card-title font-weight-bold">Data Table Phòng Ban</h1>
+                        <!-- Main content -->
                         <!-- Button to Open the Modal -->
-                        <!-- Button trigger modal -->
                         <button type="button" class="btn btn-success float-right" id="addDepartment" data-toggle="modal" data-target="#modalAdd">
                             Thêm
                         </button>
                         <!-- Modal -->
-                      
                     </div>
                     <!-- /.card-header -->
                     <div class="card-body">
                         <table id="tbDepartment" class="table table-bordered table-hover">
                             <thead>
                                 <tr>
-                                    <th>ID</th>
+                                    <th>Id</th>
                                     <th>Phòng Ban</th>
                                     <th>Trạng Thái</th>
                                     <th>Chức năng</th>
@@ -46,55 +45,11 @@
                                                     <i class="fa fa-trash" aria-hidden="true"></i>
                                                 </button>
                                         </td>
-                                </tr>
+                                        </tr>
                                     };
-                                }
+                                  }
                             </tbody>
                         </table>
-                        <div class="modal fade" id="modalAdd" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title">Thêm phòng ban</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form>
-                                            <div class="form-group">
-                                                <label for="Department">Department</label>
-                                                <input class="form-control" id="Department" placeholder="Department">
-                                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-success" id="btnAdd">Add</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!--End Modal Add-->
-                        <!--Modal Delete-->
-                        <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" id="deleteModal">
-                            <div class="modal-dialog modal-sm">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h4 class="modal-title" id="modal-delete-department-lb"></h4>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>             
-                                    </div>
-                                    <br />
-                                    <h5 style="text-align:center" id="content-modal-delete-department">Bạn có thực sự muốn xóa Phòng này không?</h5>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-success" id="modal-btn-department-yes">Yes</button>
-                                        <button type="button" class="btn btn-primary" id="modal-btn-department-no">No</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!--End Modal Delete-->
                     </div>
                     <!-- /.card-body -->
                 </div>
@@ -105,5 +60,88 @@
         <!-- /.row -->
     </div>
     <!-- /.container-fluid -->
-
 </section>
+<!-- /.content -->
+<!--Modal Add-->
+<div class="modal fade" id="modalAdd" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Thêm phòng ban</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="Department">Department</label>
+                        <input class="form-control" id="Department" placeholder="Department">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-success" id="btnAdd">Add</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--End Modal Add-->
+<!--Modal Edit-->
+<div class="modal fade" id="modal-Edit-Department" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Sửa phòng ban</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="form-Edit-Department">
+                    <div class="form-group">
+                        <label for="department-edit-input">Edit Department</label>
+                        <input class="form-control" id="department-edit-input" placeholder="Department" name="departmentname">
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="status" id="radioOption1" value="true" checked>
+                        <label class="form-check-label" for="radioOption1">
+                           Hiển thị
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="status" id="radioOption2" value="false">
+                        <label class="form-check-label" for="radioOption2">
+                           Ẩn
+                        </label>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-warning" id="btn-Edit-Department">Edit</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--End Modal Edit-->
+<!--Modal Delete-->
+<div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" id="deleteModal">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="modal-delete-department-lb"></h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            </div>
+            <br />
+            <h5 style="text-align:center" id="content-modal-delete-department">Bạn có thực sự muốn xóa Phòng này không?</h5>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success" id="modal-btn-department-yes">Yes</button>
+                <button type="button" class="btn btn-primary" id="modal-btn-department-no">No</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--End Modal Delete-->
