--- a/BFCNews/Views/Shared/_AsidePartial.cshtml
+++ b/BFCNews/Views/Shared/_AsidePartial.cshtml
@@ -36,18 +36,17 @@
                      with font-awesome or any other icon font library -->
                 <li class="nav-item">
                     <a href="@Url.Action("Index", "Department" )" class="nav-link" id="department" data-id="Department">
-                        <i class="nav-icon fas fa-tachometer-alt"></i>
+                        <i class="nav-icon fas fa fa-building"></i>
                         <p>
                             Deparment
                         </p>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../widgets.html" class="nav-link">
-                        <i class="nav-icon fas fa-th"></i>
+                    <a href="@Url.Action("Index", "Position" )" class="nav-link">
+                        <i class="nav-icon fa fa-briefcase"></i>
                         <p>
-                            Widgets
-                            <span class="right badge badge-danger">New</span>
+                            Position
                         </p>
                     </a>
                 </li>
