--- a/BFCNews/Views/Department/Index.cshtml
+++ b/BFCNews/Views/Department/Index.cshtml
@@ -10,7 +10,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <h1 class="card-title font-weight-bold">Data Table Phòng Ban</h1>
+                        <h1 class="card-title">Data Table Phòng Ban</h1>
                         <!-- Main content -->
                         <!-- Button to Open the Modal -->
                         <button type="button" class="btn btn-success float-right" id="addDepartment" data-toggle="modal" data-target="#modal-Add-Department">
@@ -36,7 +36,7 @@
                                      <tr>
                                         <td>@deparment.Id</td>
                                         <td>@deparment.Name</td>
-                                        <td> @deparment.Status</td>
+                                        <td>@deparment.Status</td>
                                             <td>
                                                 <button class="btn btn-warning">
                                                     <i class="fa fa-edit" aria-hidden="true"></i>
