--- a/BFCNews/Views/Shared/_LayoutAdmin.cshtml
+++ b/BFCNews/Views/Shared/_LayoutAdmin.cshtml
@@ -45,7 +45,7 @@
                 <!-- Default box -->
                 <div class="card">
                     <div class="card-header">
-                        <h3 class="card-title">Title</h3>
+                        <h1 class="card-title" id="title-web">Title</h1>
 
                         <div class="card-tools">
                             <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
@@ -96,7 +96,7 @@
     @*<script src="../../dist/js/demo.js"></script>*@
     <script src="../../dist/js/mainDepartment.js"></script>
     <script src="../../dist/js/ajax/CRUDajaxDepartment.js"></script>
-    <script src="../../dist/js/ajax/CRUDajaxPosition.js"></script>
+    <script src="../../dist/js/ajax/CRUDajaxRole.js"></script>
     <!-- DataTables  & Plugins -->
     <script src="../../plugins/datatables/jquery.dataTables.min.js"></script>
     <script src="../../plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
