--- a/BFCNews/Views/Shared/_AsidePartial.cshtml
+++ b/BFCNews/Views/Shared/_AsidePartial.cshtml
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="@Url.Action("register","user")" class="nav-link">
+                    <a href="@Url.Action("Register","User")" class="nav-link">
                         <i class="nav-icon fas fa-user"></i>
                         <p>
                             Create Account
