--- a/BFCNews/Views/Shared/_LayoutAdmin.cshtml
+++ b/BFCNews/Views/Shared/_LayoutAdmin.cshtml
@@ -97,6 +97,7 @@
     <script src="../../dist/js/mainDepartment.js"></script>
     <script src="../../dist/js/ajax/CRUDajaxDepartment.js"></script>
     <script src="../../dist/js/ajax/CRUDajaxRole.js"></script>
+    <script src="../../dist/js/ajax/CRUDajaxRegister.js"></script>
     <!-- DataTables  & Plugins -->
     <script src="../../plugins/datatables/jquery.dataTables.min.js"></script>
     <script src="../../plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
