--- a/BFCNews/Views/Shared/_LayoutLogin.cshtml
+++ b/BFCNews/Views/Shared/_LayoutLogin.cshtml
@@ -25,14 +25,14 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title text-center mb-4">Login</h4>
-                        <form>
+                        <form asp-action="Login">
                             <div class="mb-3">
-                                <label for="email" class="form-label">Email address</label>
-                                <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                                <label for="username" class="form-label">Email address</label>
+                                <input type="text" class="form-control" name="Username" id="Username" placeholder="Enter your email">
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="password" placeholder="Enter your password">
+                                <input type="password" class="form-control" id="password" name="Password" placeholder="Enter your password">
                             </div>
                             <div class="d-grid gap-2">
                                 <button type="submit" class="btn btn-primary">Login</button>
