--- a/BFCNews/Views/User/Register.cshtml
+++ b/BFCNews/Views/User/Register.cshtml
@@ -79,6 +79,10 @@
             <div class="modal-body">
                 <form id="form-Add-Account" enctype="multipart/form-data">
                     <div class="form-group">
+                        <label for="fullName">Full Name</label>
+                        <input type="text" id="fullName" name="fullName" class="form-control" required />
+                    </div>
+                    <div class="form-group">
                         <label for="userName">Username</label>
                         <input type="text" id="userName" name="userName" class="form-control" required />
                     </div>
