--- a/BFCNews/Views/Department/Index.cshtml
+++ b/BFCNews/Views/Department/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using BinhdienNews.Models;
+@using Microsoft.AspNetCore.Identity;
+@{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
     var departments = ViewBag.Departments;
