--- a/BFCNews/Views/Shared/_AsidePartial.cshtml
+++ b/BFCNews/Views/Shared/_AsidePartial.cshtml
@@ -25,7 +25,7 @@
                     <img src="../../Uploads/@user.Avatar" class="img-circle elevation-2" alt="User Image" style="height:35px;width:35px">
                 </div>
                 <div class="info">
-                    <a href="#" class="d-block">@user.FullName</a>
+                    <div class="d-block" style="color:white">@user.FullName</div><a href="@Url.Action("Logout","User")">Logout</a>
                 </div>
             </div>
             }
