--- a/BFCNews/Views/User/Register.cshtml
+++ b/BFCNews/Views/User/Register.cshtml
@@ -25,7 +25,7 @@
                     </div>
                     <!-- /.card-header -->
                     <div class="card-body">
-                        <table id="tbDepartment" class="table table-bordered table-hover">
+                        <table id="tbl-Account" class="table table-bordered table-hover">
                             <thead>
                                 <tr>
                                     <th>Avatar</th>
@@ -55,7 +55,7 @@
                                                         <i class="fa fa-edit" aria-hidden="true"></i>
                                                     </button>
                                                     <button class="btn btn-danger">
-                                                        <i class="fa fa-trash" aria-hidden="true"></i>
+                                                        <i class="fas fa-lock-open" aria-hidden="true"></i>
                                                     </button>
                                                 </td>
                                             </tr>
