--- a/BFCNews/Views/Shared/_LayoutAdmin.cshtml
+++ b/BFCNews/Views/Shared/_LayoutAdmin.cshtml
@@ -118,7 +118,27 @@
             $("#tbPosition").DataTable({
                 "responsive": true, "lengthChange": false, "autoWidth": false,
                 "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
-            }).buttons().container().appendTo('#tbPosition_wrapper .col-md-6:eq(0)');
+            }).buttons().container().appendTo('#tbDepartment_wrapper .col-md-6:eq(0)');
+        });
+        $(function () {
+            $("#tbRole").DataTable({
+                "responsive": true, "lengthChange": false, "autoWidth": false,
+                "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+            }).buttons().container().appendTo('#tbRole_wrapper .col-md-6:eq(0)');
+            $("#tbPosition").DataTable({
+                "responsive": true, "lengthChange": false, "autoWidth": false,
+                "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+            }).buttons().container().appendTo('#tbRole_wrapper .col-md-6:eq(0)');
+        });
+        $(function () {
+            $("#tbAccount").DataTable({
+                "responsive": true, "lengthChange": false, "autoWidth": false,
+                "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+            }).buttons().container().appendTo('#tbAccount_wrapper .col-md-6:eq(0)');
+            $("#tbPosition").DataTable({
+                "responsive": true, "lengthChange": false, "autoWidth": false,
+                "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+            }).buttons().container().appendTo('#tbAccount_wrapper .col-md-6:eq(0)');
         });
     </script>
 </body>
