--- a/BFCNews/Views/Shared/_AsidePartial.cshtml
+++ b/BFCNews/Views/Shared/_AsidePartial.cshtml
@@ -55,7 +55,7 @@
 
         <!-- Sidebar Menu -->
         <nav class="mt-2">
-            @if (User.IsInRole("Super Admin"))
+            @if (User.IsInRole("Super Admin") || User.IsInRole("Admin"))
             {
                 <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false" id="sidebarAdmin">
                     <!-- Add icons to the links using the .nav-icon class
