--- a/BFCNews/Views/User/Register.cshtml
+++ b/BFCNews/Views/User/Register.cshtml
@@ -118,12 +118,12 @@
                                 {
                                    foreach(var item in roles)
                                     {
-                                       <option value="@item.Id">@item.Name</option>
+                                       <option value="@item.Name">@item.Name</option>
                                     }
                                 }
                             }
                         </select>
-                    </div>
+                    </div>                    
                     <div class="form-group">
                         <label for="avatar">Profile Picture</label>
                         <input type="file" id="avatar" name="avatar" class="form-control-file" />
