--- a/BFCNews/Views/Role/Index.cshtml
+++ b/BFCNews/Views/Role/Index.cshtml
@@ -1,7 +1,9 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Identity;
+@{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
     var roles = ViewBag.Roles;
+    @inject RoleManager<IdentityRole> _roleManager;
 }
 
 <section class="content">
@@ -25,6 +27,7 @@
                                 <tr>
                                     <th>Id</th>
                                     <th>Role</th>
+                                    <th>Quyền</th>
                                     <th>Trạng Thái</th>
                                     <th>Chức năng</th>
                                 </tr>
@@ -38,6 +41,13 @@
                                             <tr>
                                                 <td>@role.Id</td>
                                                 <td>@role.Name</td>
+                                                <td>
+                                                    @foreach (var claim in await _roleManager.GetClaimsAsync(role))
+                                                    {
+                                                        <p style="float:left">@claim.Value ,</p>
+                                                    }
+                                                </td>
+
                                                 <td> "Không thể xóa"</td>
                                                 <td>
                                                     <button class="btn btn-warning">
